# diverg

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  LICENSE  PUBLIC.md  Procfile  README.md  RECENT_UPDATES.md  SECURITY.md  action.yml  api_server.py  bot.py  config.json  credits.py  dashboard_points.py  docker-compose.yml  intent_skills.py  nixpacks.toml  orchestrator.py  package-lock.json  package.json  poc_runner.py  railway.json  requirements.txt  sarif_output.py  test_security.py  watch_manager.py
content/: ACCURACY_AND_TESTING.txt  AI_CRYPTO_SCAN_GUIDANCE.md  API_POC_SIMULATE.md  API_STREAM_AND_GOAL.md  AUTHORIZED_TEST_TARGETS.md  DISCOVERED_EXPLOITS.md  EXPLOITS_AND_PREVENTION.md  EXTENSION_NEXT_FEATURES.md  EXTENSION_PUBLIC_FREE_FEATURES.md  FINDING_EXPLOITATION_AND_PATCH.md  INVESTIGATION_CAPABILITIES.txt  NOVEL_SKILLS.md  README.md  SKILLS_CHECKLIST.md  SYNQ_SCAN_REPORT.md  TECH_IMPROVEMENTS.txt  TRIAL_RUNS.md  ZERO_FALSE_POSITIVE_PILLARS.md  accuracy-and-research-roadmap.md  apt-style-upgrade.md  architecture-shop-scan.html  axiom-trade-runbook.md  axiom-trade-scan-diagram.html  blockchain-investigation-runbook.md  compliance_map.json  crime-identifier-strategy.md  crypto-trust-and-data-risk.md  diagram-apt-find-before-them.html  diagram-operator-workflow.html  diagram-product-overview.html  diagram-raw-to-report.html  diagram-skill-pipeline.html  diagram-surface-adaptive-scan.html  diverg-batch-validation-routes.md  (+30 more)
native/diverg-recon/: Cargo.toml  README.md
native/diverg-recon/src/: main.rs
rust_signals/port_scanner/: Cargo.toml
rust_signals/port_scanner/src/: main.rs
rust_signals/sentinel/: Cargo.toml
rust_signals/sentinel/src/: db.rs  differ.rs  fingerprint.rs  main.rs  regress.rs  types.rs
(+204 files in other folders)
