[package]
name = "diverg-port-scanner"
version = "0.1.0"
edition = "2021"
description = "Async TCP port scanner for Diverg — replaces nmap binary dependency"

[[bin]]
name = "diverg-scanner"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
