[package]
name = "diverg-sentinel"
version = "0.1.0"
edition = "2021"
description = "Sentinel security regression, surface drift, and finding diff engine for Diverg"

[[bin]]
name = "diverg-sentinel"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
url = "2"
